<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger_username">Username</string>
    <string name="messenger_logout">LogOut</string>
    <string name="messenger_phone">Phone Number</string>
    <string name="messenger_name">Name</string>
    <string name="messenger_password">Password</string>
    <string name="messenger_submit">Submit</string>
    <string name="messenger_chats">Chats</string>
    <string name="messenger_contacts">Contacts</string>
    <string name="messenger_register">New Member?Register!</string>
    <string name="messenger_write_msg">Enter Your Message...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
